--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-image: url('C:\Users\Hithesh Patel\Desktop\uvceproject\src\pages\back.jpg');
+    /* background-image: url('C:\Users\Hithesh Patel\Desktop\uvceproject\src\pages\back.jpg'); */
 	background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
